[package]
name = "reverse-proxy"
version = "0.1.0"
authors = ["xty <853122726@qq.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
log = "0.4.11"
log4rs = "0.13.0"
quinn = "0.6.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bytes = "0.5"
