[package]
name = "reverse-proxy"
version = "0.1.0"
authors = ["xty <853122726@qq.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4"
log4rs = "1"
quinn = "0.7"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
bytes = "1"
futures = "0.3"
parking_lot = "0.11"
